[package]
name = "hwh-rs-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.22.1"
chrono = "0.4.42"
chrono-tz = "0.10.4"
env_logger = "0.11.8"
futures = "0.3.31"
log = "0.4.29"
mongodb = "3.4.1"
poise = "0.6.1"
regex = "1.12.2"
reqwest = { version = "0.13.1", features = ["stream"] }
songbird = "0.5.0"
symphonia = { version = "0.5.5", features = ["wav"] }
tokio = { version = "1.48.0", default-features = false, features = ["rt-multi-thread"] }
url = "2.5.3"
